씬로드, 어드레서블로변경

--- a/Assets/Mirror/Components/Mirror.Components.asmdef
+++ b/Assets/Mirror/Components/Mirror.Components.asmdef
@@ -1,14 +1,18 @@
 {
     "name": "Mirror.Components",
+    "rootNamespace": "",
     "references": [
-        "Mirror"
+        "Mirror",
+        "Unity.Addressables",
+        "Unity.ResourceManager"
     ],
-    "optionalUnityReferences": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
-    "defineConstraints": []
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
